i-MSCP Git Master
-------------------------------------------------------------------------------------

CONFIGS:
	- Added MariaDb support
	- Added named.conf.local and named.conf.options files
	- Fixed: Useless section must be removed in generated Apache configuration files
	- Fixed: diff package isn't available for Ubuntu > 12.04 (replaced by diffutils)
	- Updated php.ini files

ENGINE:
	- Added support for Apache + PHP FPM
	- Added option allowing to disable/enable IPv6 support (Bind9)
	- Fixed: Admin must be able to add custom data in named configuration files (Bind9)
	- Fixed: DNS server must answer to queries only for zones for which it's authoritative (excepted for localhost)
	- Fixed: DNS server must be protected against common attacks
	- Fixed: DNS zone files must be checked and cleaned before installation in production directory
	- Fixed: DNS zones must be added in named.conf.local instead of named.conf (Bind9 - Debian/Ubuntu)
	- Fixed: i-MSCP network init script must start/stop MySQL server only if installed
	- Fixed: Permissions as set by Debian must be keep (bind9)
	- Fixed: Slave DNS zone files should be put in dedicated directory (Bind9)
	- Fixed: SPF record syntax

GUI:
	- Added option allowing to disconnect an user without removing its session (admin/session_manage.php)
	- Enhancement: Improved layout (admin/settings.php page)
	- Fixed: External mail server option not implemented in admin/domain_edit.page
	- Fixed: i18n issues in reseller_add.php and reseller_edit.php pages
	- Fixed: Sessions not killed (admin/session_manage.php)
	- Fixed: Unable to display the domain_edit.php/reseller_edit.php pages in some context (SQL queries too big)
	- Updated iMSCP jQuery tooltip plugin according jQuery library changes

SETUP:
	- Added support for external repositories (Debian/Ubuntu)
	- Fixed: APT packages manager must be configured before any package installation
	- Fixed: All MySQL secure installation tasks are now done by the i-MSCP installer