@@ -1,195 +1,0 @@
-<packages>
-    <httpd>
-        <alternative default="apache_fcgi">
-            <apache_fcgi>
-                <package>apache2</package>
-                <package>apache2-mpm-worker</package>
-                <package>apache2-suexec</package>
-                <package>libapache2-mod-fcgid</package>
-                <package>libapache2-mod-fastcgi</package>
-                <package>php5-cgi</package>
-            </apache_fcgi>
-            <apache_itk>
-                <package>apache2</package>
-                <package>apache2-mpm-itk</package>
-                <package>libapache2-mod-php5</package>
-            </apache_itk>
-            <apache_php_fpm>
-                <package>apache2</package>
-                <package>apache2-mpm-worker</package>
-                <package>libapache2-mod-fastcgi</package>
-                <package>php5-fpm</package>
-            </apache_php_fpm>
-        </alternative>
-    </httpd>
-    <po>
-        <alternative default="courier">
-            <courier>
-                <package>courier-imap</package>
-                <package>courier-imap-ssl</package>
-                <package>courier-pop</package>
-                <package>courier-pop-ssl</package>
-                <package>libgamin0</package>
-                <package>maildrop</package>
-            </courier>
-            <dovecot>
-                <package>dovecot-imapd</package>
-                <package>dovecot-pop3d</package>
-                <package>dovecot-mysql</package>
-                <package>dovecot-sieve</package>
-                <package>dovecot-managesieved</package>
-            </dovecot>
-        </alternative>
-    </po>
-    <mta>
-        <alternative default="postfix">
-            <postfix>
-                <package>postfix</package>
-            </postfix>
-        </alternative>
-    </mta>
-    <ftpd>
-        <alternative default="proftpd">
-            <proftpd>
-                <package>proftpd-basic</package>
-                <package>proftpd-mod-mysql</package>
-            </proftpd>
-        </alternative>
-    </ftpd>
-    <named>
-        <alternative default="bind">
-            <bind>
-                <package>bind9</package>
-            </bind>
-        </alternative>
-    </named>
-    <sql>
-        <alternative default="mysql_5.1">
-            <mysql_5.1
-                    pinning_package="mysql-client mysql-server mysql-common libmysqlclient16"
-                    pinning_pin="release o=Ubuntu,n=oneiric"
-                    pinning_pin_priority="1001"
-                    >
-                <package>mysql-server</package>
-                <package>mysql-client</package>
-                <package>mysql-common</package>
-            </mysql_5.1>
-            <mariadb_5.3
-                    pinning_package="mariadb-client mariadb-server mariadb-common mysql-common libmysqlclient16"
-                    pinning_pin="origin mirror2.hs-esslingen.de"
-                    pinning_pin_priority="1001"
-                    repository="http://mirror2.hs-esslingen.de/mariadb/repo/5.3/ubuntu"
-                    repository_origin="MariaDB"
-                    repository_key_srv="keyserver.ubuntu.com"
-                    repository_key_id="0xcbcb082a1bb943db"
-                    >
-                <package>mariadb-client</package>
-                <package>mariadb-server</package>
-                <package>mysql-common</package>
-            </mariadb_5.3>
-            <mariadb_5.5
-                    pinning_package="mariadb-client mariadb-server mariadb-common mysql-common libmysqlclient18"
-                    pinning_pin="origin mirror.netcologne.de"
-                    pinning_pin_priority="1001"
-                    repository="http://mirror.netcologne.de/mariadb/repo/5.5/ubuntu"
-                    repository_origin="MariaDB"
-                    repository_key_srv="keyserver.ubuntu.com"
-                    repository_key_id="0xcbcb082a1bb943db"
-                    >
-                <package>mariadb-client</package>
-                <package>mariadb-server</package>
-                <package>mysql-common</package>
-            </mariadb_5.5>
-            <remote_server>
-                <package>mysql-client</package>
-            </remote_server>
-        </alternative>
-    </sql>
-    <php>
-        <package>php5</package>
-        <package>php5-cli</package>
-        <package>php-pear</package>
-        <package>php5-adodb</package>
-        <package>php5-gd</package>
-        <package>php-gettext</package>
-        <package>php5-intl</package>
-        <package>php5-mcrypt</package>
-        <package>php5-mysql</package>
-        <package>php5-suhosin</package>
-    </php>
-    <perl>
-        <package>perl</package>
-        <package>perl-base</package>
-        <package>libperl5.12</package>
-        <package>libberkeleydb-perl</package>
-        <package>libcrypt-blowfish-perl</package>
-        <package>libcrypt-cbc-perl</package>
-        <package>libcrypt-passwdmd5-perl</package>
-        <package>libdata-validate-domain-perl</package>
-        <package>libdata-validate-ip-perl</package>
-        <package>libdate-calc-perl</package>
-        <package>libdate-manip-perl</package>
-        <package>libdatetime-perl</package>
-        <package>libdbd-mysql-perl</package>
-        <package>libdbi-perl</package>
-        <package>libdigest-md5-perl</package>
-        <package>libemail-valid-perl</package>
-        <package>libfile-copy-recursive-perl</package>
-        <package>libfile-mimeinfo-perl</package>
-        <package>libio-socket-inet6-perl</package>
-        <package>libio-stringy-perl</package>
-        <package>libmail-sendmail-perl</package>
-        <package>libmailtools-perl</package>
-        <package>libmime-perl</package>
-        <package>libnet-dns-perl</package>
-        <package>libnet-libidn-perl</package>
-        <package>libnet-netmask-perl</package>
-        <package>libnet-smtp-server-perl</package>
-        <package>libsnmp-session-perl</package>
-        <package>libterm-readkey-perl</package>
-        <package>libterm-readpassword-perl</package>
-        <package>libhtml-parser-perl</package>
-        <package>libtimedate-perl</package>
-        <package>libxml-parser-perl</package>
-        <package>libxml-simple-perl</package>
-        <package>libemail-simple-perl</package>
-        <package>libjson-perl</package>
-    </perl>
-    <other>
-        <package>at</package>
-        <package>bash</package>
-        <package>pbzip2</package>
-        <package>bzip2</package>
-        <package>awstats</package>
-        <package>chkrootkit</package>
-        <package>dialog</package>
-        <package>diffutils</package>
-        <package>dnsutils</package>
-        <package>gcc</package>
-        <package>gzip</package>
-        <package>iptables</package>
-        <package>ispell</package>
-        <package>libc6-dev</package>
-        <package>libexpat1</package>
-        <package>libexpat1-dev</package>
-        <package>libsasl2-modules</package>
-        <package>libmcrypt4</package>
-        <package>locales</package>
-        <package>lynx</package>
-        <package>lzma</package>
-        <package>make</package>
-        <package>openssl</package>
-        <package>original-awk</package>
-        <package>patch</package>
-        <package>policyd-weight</package>
-        <package>postgrey</package>
-        <package>procmail</package>
-        <package>rkhunter</package>
-        <package>sasl2-bin</package>
-        <package>ssh</package>
-        <package>tar</package>
-        <package>wget</package>
-        <package>curl</package>
-        <package>git</package>
-    </other>
-</packages>
